# multi-threaded-chat-system

./: CMakeLists.txt  README.md
client_gui/: CMakeLists.txt  MainWindow.cpp  main.cpp
scripts/: cleanup_shm.sh  run_client.sh  run_server.sh
server/: CMakeLists.txt  server.cpp
shared/: common.h
tests/: CMakeLists.txt  automated_test.cpp  shm_test_client.cpp
